display info about consents in admin and customer area

--- a/src/Resources/views/Admin/Return/Show/_customerConsent.html.twig
+++ b/src/Resources/views/Admin/Return/Show/_customerConsent.html.twig
@@ -2,8 +2,13 @@
     {{ 'madcoders_rma.ui.customer_consent'|trans }}
 </h4>
 <div class="ui attached segment" id="customer-consent-data">
-    {# @todo replace with dynamic stuff from db #}
-{#    {% if order_return.orderReturnConsent == true %}#}
-{#        {{ order_return.orderReturnConsentLabel }}#}
-{#    {% endif %}#}
+    {% if order_return.orderReturnConsents %}
+        {% for consent in order_return.orderReturnConsents %}
+                <div class="ui mt2-m">
+                    {% if consent.checked %}<span class="ui label green">[x]</span>{% else %}<span class="ui label red">[&nbsp;]</span>{% endif %}
+                    {{ consent.label }}
+                </div>
+                <br>
+        {% endfor %}
+    {% endif %}
 </div>
