--- a/src/Resources/views/Admin/Configuration/Show/Form/_address.html.twig
+++ b/src/Resources/views/Admin/Configuration/Show/Form/_address.html.twig
@@ -4,24 +4,22 @@
     {% set type = null %}
 {% endif %}
 
-{{ form_row(form.company, sylius_test_form_attribute(type ~ 'company')) }}
-{{ form_row(form.street, sylius_test_form_attribute(type ~ 'street')) }}
-
-{% include '@SyliusShop/Common/Form/_countryCode.html.twig' with {'form': form.countryCode} %}
-
-<div class="province-container field" data-url="{{ path('sylius_shop_ajax_render_province_form') }}">
-    {% if form.provinceCode is defined %}
-        {{ form_row(form.provinceCode, sylius_test_form_attribute('province-code')|sylius_merge_recursive( {'attr': {'class': 'ui dropdown'}})) }}
-    {% elseif form.provinceName is defined %}
-        {{ form_row(form.provinceName, sylius_test_form_attribute('province-name')) }}
-    {% endif %}
-</div>
-
-{% if form.provinceCode is defined %}
-    {{ form_errors(form) }}
-{% endif %}
-
-<div class="two fields">
-    {{ form_row(form.city, sylius_test_form_attribute(type ~ 'city')) }}
-    {{ form_row(form.postcode, sylius_test_form_attribute(type ~ 'postcode')) }}
+<div class="ui attached segment">
+    <div class="field">
+        {{ form_row(form.company, sylius_test_form_attribute(type ~ 'company')) }}
+    </div>
+    <div class="field">
+        {{ form_row(form.street, sylius_test_form_attribute(type ~ 'street')) }}
+    </div>
+    <div class="field">
+        {% include '@SyliusShop/Common/Form/_countryCode.html.twig' with {'form': form.countryCode} %}
+    </div>
+    <div class="two fields">
+        <div class="field">
+            {{ form_row(form.city, sylius_test_form_attribute(type ~ 'city')) }}
+        </div>
+        <div class="field">
+            {{ form_row(form.postcode, sylius_test_form_attribute(type ~ 'postcode')) }}
+        </div>
+    </div>
 </div>
