--- a/src/Resources/views/Admin/Configuration/Show/_content.html.twig
+++ b/src/Resources/views/Admin/Configuration/Show/_content.html.twig
@@ -4,19 +4,28 @@
             {{ 'madcoders_rma.admin.configuration.select_channel'|trans }}
         </h3>
 
-        {{ form_start(channelForm, {'action': path('madcoders_rma_start'), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
+        {{ form_start(channelForm, {'action': path('madcoders_rma_admin_order_return_config_change_channel' ), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
 
             {{ form_row(channelForm.channelChoice, sylius_test_form_attribute('rma-admin-channel-choice-field')) }}
             {{ form_row(channelForm._token) }}
             <br/>
-            <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('rma-continue-button') }}>
-                {{ 'madcoders_rma.ui.continue_button'|trans }}
+            <button type="submit" class="ui large primary submit button"
+                    {{ sylius_test_html_attribute('rma-admin-config-change-channel-button') }}>
+                {{ 'madcoders_rma.ui.change_channel_button'|trans }}
             </button>
 
         {{ form_end(channelForm, {'render_rest': false}) }}
 
-        {# @todo remember to pass channelId to action #}
-        {{ form_start(addressFormToSelectedChannel, {'action': path('madcoders_rma_start'), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
+    </div>
+</div>
+
+<div class="ui stackable segment grid">
+    <div class="sixteen wide column">
+        <h3 class="ui dividing header">
+            {{ 'madcoders_rma.admin.configuration.change_return_addresss_to_channel'|trans }}: {{ channel.name }}
+        </h3>
+
+        {{ form_start(addressFormToSelectedChannel, {'action': path('madcoders_rma_admin_order_return_config_add_address_to_selected_channel', { 'channelId': channel.id }), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
 
             {% include '@MadcodersSyliusRmaPlugin/Admin/Configuration/Show/Form/_address.html.twig' with {'form': addressFormToSelectedChannel} %}
 
