Add customer note functionality

--- a/src/Resources/views/Return/Download/pdf.html.twig
+++ b/src/Resources/views/Return/Download/pdf.html.twig
@@ -176,6 +176,24 @@
                 </table>
             </td>
         </tr>
+        <tr>
+            <td colspan="4">
+                <table>
+                    <tr>
+                        <td style="text-align: center;">
+                            <h4>
+                                <strong style="text-transform: uppercase;">{{ 'madcoders_rma.ui.return_reason' |trans }}</strong>
+                            </h4>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: left;">
+                            <span>{{ orderReturnFormData.customerNote }}</span>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
         <td colspan="4">
             <table>
                 <tr>
