--- a/src/Resources/views/Return/Download/pdf.html.twig
+++ b/src/Resources/views/Return/Download/pdf.html.twig
@@ -176,24 +176,26 @@
                 </table>
             </td>
         </tr>
-        <tr>
-            <td colspan="4">
-                <table>
-                    <tr>
-                        <td style="text-align: center;">
-                            <h4>
-                                <strong style="text-transform: uppercase;">{{ 'madcoders_rma.ui.return_reason' |trans }}</strong>
-                            </h4>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">
-                            <span>{{ orderReturnFormData.customerNote }}</span>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
+        {% if orderReturnFormData.customerNote not null %}
+            <tr>
+                <td colspan="4">
+                    <table>
+                        <tr>
+                            <td style="text-align: center;">
+                                <h4>
+                                    <strong style="text-transform: uppercase;">{{ 'madcoders_rma.ui.comments' |trans }}</strong>
+                                </h4>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: left;">
+                                <span>{{ orderReturnFormData.customerNote }}</span>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        {% endif %}
         <td colspan="4">
             <table>
                 <tr>
