small   fix in variable

--- a/src/Resources/views/Return/Download/pdf.html.twig
+++ b/src/Resources/views/Return/Download/pdf.html.twig
@@ -176,7 +176,7 @@
                 </table>
             </td>
         </tr>
-        {% if orderReturnFormData.customerNote not null %}
+        {% if orderReturnFormData.customerNote != null %}
             <tr>
                 <td colspan="4">
                     <table>
