Add require functionality to consent option

--- a/src/Resources/views/Admin/Consent/_form.html.twig
+++ b/src/Resources/views/Admin/Consent/_form.html.twig
@@ -22,6 +22,9 @@
             <div class="field">
                 {{ form_row(form.enabled) }}
             </div>
+            <div class="field">
+                {{ form_row(form.consentRequire) }}
+            </div>
         </div>
     </div>
 </div>
