fix timeAgo extension

--- a/src/Resources/views/Return/Download/pdf.html.twig
+++ b/src/Resources/views/Return/Download/pdf.html.twig
@@ -202,8 +202,14 @@
                     <td style="text-align: center;">
                         <p style="vertical-align: bottom"><strong>{{ 'sylius.ui.date'|trans }}:</strong> {{ "now"|date("m/d/Y") }}</p>
                     </td>
-                    <td style="text-align: center; border: 1px solid #ccc!important; border-radius: 16px; background-color: #eeeeee">
-                        <p style="margin-top: 2.5em; margin-bottom: 2.5em; color: #dddddd">{{ 'madcoders_rma.pdf.place_for_signature' |trans }}</p>
+                    <td>
+                        <table>
+                            <tr>
+                                <td style="text-align: center; border: 1px solid #ccc!important; border-radius: 16px; background-color: #eeeeee">
+                                    <p style="margin-top: 2.5em; margin-bottom: 2.5em; color: #dddddd">{{ 'madcoders_rma.pdf.place_for_signature' |trans }}</p>
+                                </td>
+                            </tr>
+                        </table>
                     </td>
                 </tr>
             </table>
