--- a/src/Resources/views/Return/Form/_item.html.twig
+++ b/src/Resources/views/Return/Form/_item.html.twig
@@ -4,6 +4,7 @@
         {% set variant = rma_product_view(form.vars.value.productSku) %}
         {% if form.vars.value.maxQty > 0 %}
         <tr>
+            {# @TODO: Add select functionality #}
 {#            <td>#}
 {#                {{ form_row(form.itemToReturn) }}#}
 {#            </td>#}
@@ -14,7 +15,8 @@
                 {% include '@MadcodersSyliusRmaPlugin/Return/Form/Item/_options.html.twig' with {'variant': variant} %}
             </td>
             <td class="center line">
-                <span class="sylius-quantity" style="display: inline-block" >{{ form_row(form.returnQty) }} </span> <span>/ {{ form.vars.value.maxQty }}</span>
+                <span class="sylius-quantity" style="display: inline-block" >{{ form_row(form.returnQty) }}</span>
+                <span style="vertical-align: top"> / {{ form.vars.value.maxQty }}</span>
             </td>
         </tr>
         {% endif %}
