SYLRMA-19 Second scenario (WIP)

--- a/src/Resources/views/Auth/start.html.twig
+++ b/src/Resources/views/Auth/start.html.twig
@@ -20,7 +20,7 @@
                 {{ form_row(form.orderNumber, sylius_test_form_attribute('rma-order-number-field')) }}
                 {{ form_row(form._token) }}
                 <br/>
-                <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('rma-continue-button') }}>{{ 'madcoders_rma.ui.continue_button'|trans }}</button>
+                <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('rma-submit-button') }}>{{ 'madcoders_rma.ui.continue_button'|trans }}</button>
                 {{ form_end(form, {'render_rest': false}) }}
             </div>
         </div>
