created first scenario

--- a/src/Resources/views/Admin/Return/Show/_headerWidget.html.twig
+++ b/src/Resources/views/Admin/Return/Show/_headerWidget.html.twig
@@ -11,7 +11,7 @@
 
         {% if order_return.orderReturnStatus == 'new' %}
             {% set pathDone = path('madcoders_rma_admin_order_return_show_complete', {'id': order_return.id, '_csrf_token': csrf_token(order_return.id) }) %}
-            {{ buttons.default(pathDone, 'sylius.ui.complete'|trans, order_return.id, 'check circle outline', 'green') }}
+            {{ buttons.default(pathDone, 'sylius.ui.complete'|trans, order_return.id, 'check circle outline', 'complete-button green') }}
         {% endif %}
 
        {% if order_return.orderReturnStatus != 'completed' and  order_return.orderReturnStatus != 'canceled' %}
