finished work for "Order Returns Status"

--- a/src/Resources/views/Admin/Return/Show/_headerWidget.html.twig
+++ b/src/Resources/views/Admin/Return/Show/_headerWidget.html.twig
@@ -16,7 +16,7 @@
 
        {% if order_return.orderReturnStatus != 'completed' and  order_return.orderReturnStatus != 'canceled' %}
             {% set pathCancel = path('madcoders_rma_admin_order_return_show_cancel', {'id': order_return.id, '_csrf_token': csrf_token(order_return.id) }) %}
-            {{ buttons.default(pathCancel, 'sylius.ui.cancel'|trans, order_return.id, 'cancel', 'red') }}
+            {{ buttons.default(pathCancel, 'sylius.ui.cancel'|trans, order_return.id, 'cancel', 'cancel-button red') }}
         {% endif %}
 
     </div>
