--- a/src/Resources/views/Return/summary.html.twig
+++ b/src/Resources/views/Return/summary.html.twig
@@ -49,7 +49,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for item in returnOrder.items %}
+                            {% for item in returnOrder.items if item.returnQty > 0 %}
                                 {% include '@MadcodersSyliusRmaPlugin/Return/Summary/_item.html.twig' with {'item': item} %}
                             {% endfor %}
                             </tbody>
