SYLRMA-24 Behat - start return form

--- a/src/Resources/views/BulkAction/createNewReturn.html.twig
+++ b/src/Resources/views/BulkAction/createNewReturn.html.twig
@@ -6,7 +6,7 @@
 
 {% if data.state == 'fulfilled' and orderHasItemsToReturned == true %}
 
-    {{ buttons.default(path, action.label, true, 'undo alternate', 'primary') }}
+    {{ buttons.default(path, action.label, null, 'undo alternate', 'primary') }}
 
 {% endif %}
 
